# papyri

./: .flake8  .gitignore  .gitmodules  CONTRIBUTING.md  GraphTest1-Copy1.ipynb  LICENSE  Papyri Prototype.ipynb  Procfile  Readme.md  TODO  TreeVisitor.ipynb  app.json  build_tree_sitter.py  codecov.yml  d3.json  example.py  example.rst  gen.py  index.html  mypy.ini  of_interest  papyri.toml  pnpm-lock.yaml  pyproject.toml  pytest.ini  render.py  requirements-dev.txt  requirements.txt  scipy-2022-proposal  slides.md  take2.py
.github/workflows/: ingest.yml  lint.yml  papyri-lab-build.yml  preview.yml  python-package.yml  viewer.yml
docs/: crossrefs.rst  index.rst
docs/examples/: simple_plot.py
examples/: IPython.toml  astropy.toml  dask.toml  distributed.toml  example-0.expected  gallery1.py  matplotlib.toml  networkx.toml  numpy.toml  pandas.toml  papyri.toml  readthedocs.toml  scipy.toml  skimage.toml  xarray.toml
frontend/: README.md  package.json  webpack.config.js
frontend/public/: index.html
frontend/src/: index.js
minirst/: __init__.py  __main__.py  ref.py
papyri/: 404.tpl.j2  __init__.py  __main__.py  ascii.tpl.j2  base.tpl.j2  browser.py  common_ast.py  config.py  core.py  core.tpl.j2  crosslink.py  directives.py  errors.py  examples.py  examples.tpl.j2  gallery.tpl.j2  gen.py  graph.tpl.j2  graphstore.py  head.tpl.j2  html.tpl.j2  index.tpl.j2  ipython.py  jlab.py  macros.tpl.j2  miniserde.py  miscs.py  myst_ast.py  myst_serialiser.py  render.py  rich_render.py  root.tpl.j2  signature.py  skeleton.tpl.j2  stores.py  take2.py  textual.py  toc.py  toctree.tpl.j2  tree.py  (+5 more)
papyri-lab/: .copier-answers.yml  .gitignore  .prettierignore  LICENSE  README.md  RELEASE.md  conftest.py  install.json  package.json  pyproject.toml
papyri-lab/.github/workflows/: check-release.yml
papyri-lab/jupyter-config/server-config/: papyri_lab.json
papyri-lab/papyri_lab/: __init__.py  handlers.py
papyri-lab/papyri_lab/tests/: __init__.py  test_handlers.py
papyri-lab/schema/: plugin.json
papyri-lab/src/: handler.ts  index.tsx  kernelspy.ts  papyri-comp.tsx  widgets.tsx
papyri-lab/src/__tests__/: papyri_lab.spec.ts
papyri-lab/style/: app.css  base.css  tailwind.css
papyri-lab/ui-tests/: jupyter_server_test_config.py  package.json
papyri-lab/ui-tests/tests/: papyri_lab.spec.ts
papyri/app/static/js/: main.27408fde.js  main.27408fde.js.LICENSE.txt  react-syntax-highlighter_languages_highlight_abnf.05a76338.chunk.js  react-syntax-highlighter_languages_highlight_accesslog.32f749c7.chunk.js  react-syntax-highlighter_languages_highlight_actionscript.bb38f24a.chunk.js  react-syntax-highlighter_languages_highlight_ada.481ce680.chunk.js  react-syntax-highlighter_languages_highlight_angelscript.98c5a3f3.chunk.js  react-syntax-highlighter_languages_highlight_apache.2bda4313.chunk.js  react-syntax-highlighter_languages_highlight_applescript.a85a925c.chunk.js  react-syntax-highlighter_languages_highlight_arcade.37c267c4.chunk.js  react-syntax-highlighter_languages_highlight_arduino.f37f4cd6.chunk.js  react-syntax-highlighter_languages_highlight_armasm.6f4bc87b.chunk.js  react-syntax-highlighter_languages_highlight_asciidoc.bfcbf425.chunk.js  react-syntax-highlighter_languages_highlight_aspectj.38a88f9f.chunk.js  react-syntax-highlighter_languages_highlight_autohotkey.488322bf.chunk.js  react-syntax-highlighter_languages_highlight_autoit.e0391fb1.chunk.js  react-syntax-highlighter_languages_highlight_avrasm.f9d85792.chunk.js  react-syntax-highlighter_languages_highlight_awk.401bf380.chunk.js  react-syntax-highlighter_languages_highlight_axapta.ed0ffd71.chunk.js  react-syntax-highlighter_languages_highlight_bash.3431dffb.chunk.js  react-syntax-highlighter_languages_highlight_basic.11a5bb09.chunk.js  react-syntax-highlighter_languages_highlight_bnf.d82143ed.chunk.js  react-syntax-highlighter_languages_highlight_brainfuck.ff2a19f8.chunk.js  react-syntax-highlighter_languages_highlight_c.de8c4076.chunk.js  react-syntax-highlighter_languages_highlight_cLike.3a7b72e9.chunk.js  react-syntax-highlighter_languages_highlight_cal.b19a3bea.chunk.js  react-syntax-highlighter_languages_highlight_capnproto.2da1bfd7.chunk.js  react-syntax-highlighter_languages_highlight_ceylon.097bcbb4.chunk.js  (+165 more)
papyri/static/: graph_canvas.js  graph_svg.js  myst.css  myst.js  papyri.css  papyri.tcss
papyri/templates/: 404.tpl.j2  ascii.tpl.j2  head.tpl.j2  html.tpl.j2  index.tpl.j2  macros.tpl.j2  root.tpl.j2  skeleton.tpl.j2  toctree.tpl.j2
papyri/tests/: test_ascii_expected.py  test_corpus.py  test_error_collector.py  test_full_render.py  test_gen.py  test_parse.py  test_signatures.py  test_take2.py  utils.py
papyri/tests/corpus/: no-space-parenthesis.expected.txt  no-space-parenthesis.sample.txt  test.expected.txt
papyri/tests/expected/: numpy:einsum.expected  numpy:linspace.expected  papyri.examples  papyri.examples.expected  papyri.examples:annotation_with_hex_addresses.expected  papyri.examples:example1.expected
papyri/tri/: __init__.py  triplot.py
tests/: test_examples.py  tests_examples.py
tools/: vendor_scripts.sh
velin/: __init__.py  __main__.py  core.tpl.j2  examples_section_utils.py  ref.py
viewer/: package.json
(+1 files in other folders)
