[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "papyri"
authors = [{name = "Matthias Bussonnier", email = "bussonniermatthias@gmail.com"}]
classifiers = ["License :: OSI Approved :: MIT License"]
readme = "Readme.md"
license = {file = "LICENSE"}
dynamic = ["version","description"]
requires-python=">=3.8"
dependencies = [
    "typer",
    "tomli;python_version>='3.11'",
    "tomli_w",
    "urwid",
    "httpx",
    "jinja2<3.1",
    "ipython",
    "numpydoc",
    "cachetools",
    "pygments",
    "black",
    "there",
    "rich",
    "jedi",
    "typer",
    "velin",
    "quart-trio",
    "quart<0.14",
    "flatlatex",
    # "tree_sitter", # tree sitter does not currently provide builds for all platform. tree-sitter-builds is an
    # alternative build that provide more wheels.
    "tree-sitter-builds",
    "tree_sitter_languages>=1.5",
    #
    "matplotlib",
    "cbor2",
    "minify_html",
]

[project.scripts]
papyri = "papyri:app"

[tool.pytest.ini_options]
addopts = "--durations=10"
filterwarnings = "ignore:The module numpy.dual.*:DeprecationWarning"

[project.urls]
Home = "https://github.com/Carreau/papyri"
