[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "papyri"
authors = [{name = "Matthias Bussonnier", email = "bussonniermatthias@gmail.com"}]
classifiers = ["License :: OSI Approved :: MIT License"]
readme = "Readme.md"
license = {file = "LICENSE"}
dynamic = ["version","description"]
requires-python=">=3.11"
dependencies = [
    "black",
    "flatlatex",
    "httpx",
    "ipython",
    "jedi",
    "jinja2>=3.1.2",
    "numpydoc",
    "pygments",
    "quart-trio>=0.6.0",
    "quart>=0.18.4",
    "rich",
    "tomli_w",
    "typer>=0.9",
    "urwid",
    "velin",
    # "tree_sitter", # tree sitter does not currently provide builds for all platform. tree-sitter-builds is an
    # alternative build that provide more wheels.
    "tree-sitter-builds",
    "tree_sitter_languages>=1.5",
    #
    "matplotlib",
    "cbor2",
    "minify_html",
    "textual",
    "emoji",
]

[project.scripts]
papyri = "papyri:app"

[tool.pytest.ini_options]
addopts = "--durations=10 --ignore=papyri-lab"
filterwarnings = "ignore:The module numpy.dual.*:DeprecationWarning"

[project.urls]
Home = "https://github.com/Jupyter/papyri"

[tool.mypy]
python_version = '3.11'
ignore_missing_imports = true
